put all team icons and names in the same box

--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -112,57 +112,40 @@
                                 <a href="https://www.linkedin.com/in/kaylanh/">
                                 <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
                                 </a>
+                                <p>Kaylan Huang</p>
+                                </a>
+                                <p>Project Lead</p>
+                                <p>Senior | Economics</p>
                               </div>
                               <div class="col">
                                 <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
-                                <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyed" />
+                                <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyad" />
+                                <p>Zeyad El-Arabaty</p>
+                                  </a>
+                                  <p>Project Lead</p>
+                                  <p>Senior | CompSci</p>
                                 </a>
                               </div>
                               <div class="col">
                                 <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
                                 <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
+                                <p>Qianning Tang</p>
+                                  </a>
+                                  <p>Freshman | Sustanable Environmental Design</p>
                                 </a>
                               </div>
                               <div class="col">
                                 <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
                                 <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
                                 </a>
+                                <p>Ryan Yu</p>
+                              </a>
+                              <p>Junior | Molecular and Cell Biology</p>
                               </div>
                               <div class="col">
                                 <a href="https://www.linkedin.com/in/shaantam/">
                                 <img src="../assets/img/alemany/people/shaantam.svg" alt="shaantam" />
                                 </a>
-                            </div>
-                          </div>
-                          <div class="row">
-                            <div class="col text-center">
-                                <a href="https://www.linkedin.com/in/kaylanh/">
-                                <p>Kaylan Huang</p>
-                                </a>
-                                <p>Project Lead</p>
-                                <p>Senior | Economics</p>
-                            </div>
-                              <div class="col text-center">
-                                  <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
-                                  <p>Zeyad El-Arabaty</p>
-                                  </a>
-                                  <p>Project Lead</p>
-                                  <p>Senior | CompSci</p>
-                              </div>
-                              <div class="col text-center">
-                                  <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
-                                  <p>Qianning Tang</p>
-                                  </a>
-                                  <p>Freshman | Sustanable Environmental Design</p>
-                              </div>
-                              <div class="col text-center">
-                                  <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
-                                  <p>Ryan Yu</p>
-                                  </a>
-                                  <p>Junior | Molecular and Cell Biology</p>
-                              </div>
-                              <div class="col text-center">
-                                <a href="https://www.linkedin.com/in/shaantam/">
                                 <p>Shaantam Chawla</p>
                                 </a>
                                 <p>Junior | EECS + Public Policy Minor</p>
