disappearing last names for mobile added

--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -155,40 +155,40 @@
                                 </div>
                                 <div class="row">
                                     <div class="col text-center">
-                                        <p>
-                                            <a href="https://www.linkedin.com/in/grace-lam-95789a62/">Grace Lam</a></p>
+                                        <a href="https://www.linkedin.com/in/grace-lam-95789a62/"></a>
+                                        <h7>Grace</h7> <p id="teaminfo">Lam</p>
                                         <p>Project Lead</p>  
                                         <p>EECS, Business</p>
                                     </div>
                                     <div class="col text-center">
-                                        <p>Jasmine Chen</p>
+                                        <h7>Jasmine</h7> <p id="teaminfo">Chen</p>
                                         <p>Space Design</p>  
                                         <p>Architecture</p>
                                     </div>
                                     <div class="col text-center">
                                         <a href="https://www.linkedin.com/in/neemarashidi/">
-                                        <p>Neema Rashidi</p>
+                                        <h7>Neema</h7> <p id="teaminfo">Rashidi</p>
                                         </a>
                                         <p>Community Engagement</p>  
                                         <p>MCB</p>
                                     </div>
                                     <div class="col text-center">
                                         <a href="https://www.linkedin.com/in/natalie-deng">
-                                        <p>Natalie Deng</p>
+                                        <h7>Natalie</h7> <p id="teaminfo">Deng</p>
                                         </a>
                                         <p>Community Engagement</p>  
                                         <p>Political Economics</p>
                                     </div>
                                     <div class="col text-center">
                                         <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
-                                        <p>Jake Nuesca</p>
+                                        <h7>Jake</h7> <p id="teaminfo">Nuesca</p>
                                         </a>
                                         <p>Product Design</p>  
                                         <p>Mechanical Eng.</p>
                                     </div>
                                     <div class="col text-center">
                                         <a href="https://www.linkedin.com/in/aryannair">
-                                        <p>Aryan Nair</p>
+                                        <h7>Aryan</h7> <p id="teaminfo">Nair</p>
                                         </a>
                                         <p>Community Engagement</p>  
                                         <p>Chemical Eng.</p>
