--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -156,33 +156,33 @@
                                 <div class="row">
                                     <div class="col text-center">
                                         <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
-                                        <p>Isabella Dyc-O'Neal</p>
+                                        <h7>Isabella</h7> <p id="teaminfo">Dyc-O'Neal</p>
                                         </a>
                                         <p>Project Lead</p>  
                                         <p>Cognitive Science</p>
                                     </div>
                                     <div class="col text-center">
                                         <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
-                                        <p>Abhinav Subramaniam</p>
+                                        <h7>Abhinav</h7> <p id="teaminfo">Subramaniam</p>
                                         </a>
                                         <p>Business Strategy Developer</p>  
                                         <p>Mechanical Engineering</p>
                                     </div>
                                     <div class="col text-center">
                                         <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
-                                        <p>Laurel Nelson</p>
+                                        <h7>Laurel</h7> <p id="teaminfo">Nelson</p>
                                         </a>
                                         <p>Business Strategy Developer</p>  
                                         <p>Bioengineering</p>
                                     </div>
                                     <div class="col text-center">
-                                        <p>Leo Gamboa</p>
+                                        <h7>Leo</h7> <p id="teaminfo">Gamboa</p>
                                         <p>Business Strategy Developer</p>  
                                         <p>MCB & Political Science</p>
                                     </div>
                                     <div class="col text-center">
                                         <a href="https://www.linkedin.com/in/maya-chen-1099/">
-                                        <p>Maya Chen</p>
+                                        <h7>Maya</h7> <p id="teaminfo">Chen</p>
                                         </a>
                                         <p>User Interface Designer</p>  
                                         <p>Cognitive Science</p>
