--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -155,33 +155,33 @@
                             <div class="row">
                                 <div class="col text-center">
                                     <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
-                                    <p>Zulaika Zulkephli</p>
+                                    <h7>Zulaika</h7> <p id="teaminfo">Zulkephli</p>
                                     </a>
                                     <p>Project Lead</p>  
                                     <p>Senior | Psychology</p>
                                 </div>
                                 <div class="col text-center">
                                     <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
-                                    <p>Batu Akkas</p>
+                                    <h7>Batu</h7> <p id="teaminfo">Akkas</p>
                                     </a>
                                     <p>Freshman | BioE</p>
                                 </div>
                                 <div class="col text-center">
                                     <a href="https://www.linkedin.com/in/djasonchen/">
-                                    <p>Dan Chen</p>
+                                    <h7>Dan</h7> <p id="teaminfo">Chen</p>
                                     </a>
                                     <p>Sophomore | Statistics</p>
                                 </div>
                                 <div class="col text-center">
-                                    <p>Jeffrey Shen</p>
+                                    <h7>Jeffrey</h7> <p id="teaminfo">Shen</p>
                                     <p>Freshman | Architecture</p>
                                 </div>
                                 <div class="col text-center">
-                                    <p>Natalie Chu</p>
+                                    <h7>Natalie</h7> <p id="teaminfo">Chu</p>
                                     <p>Freshman | Architecture</p>
                                 </div>
                                 <div class="col text-center">
-                                    <p>Sunny Hsu</p>
+                                    <h7>Sunny</h7> <p id="teaminfo">Hsu</p>
                                     <p>Freshman | CivE</p>
                                 </div>
                             </div>
