--- a/projects/netic.html
+++ b/projects/netic.html
@@ -159,40 +159,40 @@
                             <div class="row">
                                 <div class="col text-center">
                                   <a href="https://www.linkedin.com/in/anika-singhania-b07b31179/">
-                                    <p id="anika">Anika Singhania</p>
+                                    <h7>Anika</h7> <p id="teaminfo">Singhania</p>
                                   </a>
                                     <p>Project Lead</p>
                                     <p>Freshman | CompSci</p>
                                 </div>
                                 <div class="col text-center">
                                   <a href="https://www.linkedin.com/in/allan-lee-22a0a614a/">
-                                    <p>Allan Lee</p>
+                                    <h7>Allan</h7>  <p id="teaminfo">Lee</p>
                                   </a>
                                     <p>Design Consultant</p>
                                     <p>Junior | BioE</p>
                                 </div>
                                 <div class="col text-center">
                                   <a href="https://www.linkedin.com/in/leilani-chu-342563130/">
-                                    <p>Leilani Chu</p>
+                                    <h7>Leilani</h7> <p id="teaminfo">Chu</p>
                                   </a>
                                     <p>UI Designer</p>
                                     <p>Senior | Molecular & Cell Biology</p>
                                 </div>
                                 <div class="col text-center">
                                   <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
-                                    <p>Philippa Steinberg</p>
+                                    <h7>Philippa</h7> <p id="teaminfo">Steinberg</p>
                                   </a>
                                     <p>UI Designer</p>
                                     <p>Freshman | Molecular & Cell Biology</p>
                                 </div>
                                 <div class="col text-center">
-                                    <p>Reid Johnson</p>
+                                    <h7>Reid</h7> <p id="teaminfo">Johnson</p>
                                     <p>Coding Consultant</p>
                                     <p>Junior | Math + CompSci</p>
                                 </div>
                                 <div class="col text-center">
                                   <a href="https://www.linkedin.com/in/carlos-oriol/">
-                                    <p>Carlos Oriol</p>
+                                    <h7>Carlos</h7> <p id="teaminfo"> Oriol</p>
                                   </a>
                                     <p>Design Consultant</p>
                                     <p>Sophomore | Data Science</p>
