--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -137,33 +137,33 @@
                           <div class="row">
                             <div class="col text-center">
                                 <a href="https://www.linkedin.com/in/kaylanh/">
-                                <p>Kaylan Huang</p>
+                                <h7>Kaylan</h7> <p id="teaminfo">Huang</p>
                                 </a>
                                 <p>Project Lead</p>
                                 <p>Senior | Economics</p>
                             </div>
                               <div class="col text-center">
                                   <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
-                                  <p>Zeyad El-Arabaty</p>
+                                  <h7>Zeyad</h7> <p id="teaminfo">El-Arabaty</p>
                                   </a>
                                   <p>Project Lead</p>
                                   <p>Senior | CompSci</p>
                               </div>
                               <div class="col text-center">
                                   <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
-                                  <p>Qianning Tang</p>
+                                  <h7>Qianning</h7> <p id="teaminfo">Tang</p>
                                   </a>
                                   <p>Freshman | Sustanable Environmental Design</p>
                               </div>
                               <div class="col text-center">
                                   <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
-                                  <p>Ryan Yu</p>
+                                  <h7>Ryan</h7> <p id="teaminfo">Yu</p>
                                   </a>
                                   <p>Junior | Molecular and Cell Biology</p>
                               </div>
                               <div class="col text-center">
                                 <a href="https://www.linkedin.com/in/shaantam/">
-                                <p>Shaantam Chawla</p>
+                                <h7>Shaantam</h7> <p id="teaminfo">Chawla</p>
                                 </a>
                                 <p>Junior | EECS + Public Policy Minor</p>
                             </div>
