--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -127,74 +127,56 @@
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/grace-lam-95789a62/">
                                         <img src="../assets/img/pizza/icons/grace.svg" alt="Grace" />
-                                        <p>Grace Lam</p>
+                                        <p>Grace <p id="teaminfo">Lam</p>
                                         <p>Project Lead</p>  
                                         <p>EECS, Business</p>
                                         </a>
                                     </div>
                                     <div class="col">
                                         <img src="../assets/img/pizza/icons/jasmine.svg" alt="Jasmine" />
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/neemarashidi/">
-                                        <img src="../assets/img/pizza/icons/neema.svg" alt="Neema" />
-                                        </a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/natalie-deng">
-                                        <img src="../assets/img/pizza/icons/natalie (1).svg" alt="Natalie" />
-                                        </a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
-                                        <img src="../assets/img/pizza/icons/jake.svg" alt="Jake" />
-                                        </a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/aryannair">
-                                        <img src="../assets/img/pizza/icons/aryan.svg" alt="Aryan" />
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col text-center">
-                                        <a href="https://www.linkedin.com/in/grace-lam-95789a62/"></a>
-                                        <h7>Grace</h7> <p id="teaminfo">Lam</p>
-                                        <p>Project Lead</p>  
-                                        <p>EECS, Business</p>
-                                    </div>
-                                    <div class="col text-center">
                                         <h7>Jasmine</h7> <p id="teaminfo">Chen</p>
                                         <p>Space Design</p>  
                                         <p>Architecture</p>
                                     </div>
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/neemarashidi/">
-                                        <h7>Neema</h7> <p id="teaminfo">Rashidi</p>
+                                        <img src="../assets/img/pizza/icons/neema.svg" alt="Neema" />
+                                        <a href="https://www.linkedin.com/in/neemarashidi/">
+                                            <h7>Neema</h7> <p id="teaminfo">Rashidi</p>
+                                            </a>
+                                            <p>Community Engagement</p>  
+                                            <p>MCB</p>
                                         </a>
-                                        <p>Community Engagement</p>  
-                                        <p>MCB</p>
                                     </div>
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/natalie-deng">
-                                        <h7>Natalie</h7> <p id="teaminfo">Deng</p>
+                                        <img src="../assets/img/pizza/icons/natalie (1).svg" alt="Natalie" />
+                                        <a href="https://www.linkedin.com/in/natalie-deng">
+                                            <h7>Natalie</h7> <p id="teaminfo">Deng</p>
+                                            </a>
+                                            <p>Community Engagement</p>  
+                                            <p>Political Economics</p>
                                         </a>
-                                        <p>Community Engagement</p>  
-                                        <p>Political Economics</p>
                                     </div>
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
-                                        <h7>Jake</h7> <p id="teaminfo">Nuesca</p>
+                                        <img src="../assets/img/pizza/icons/jake.svg" alt="Jake" />
+                                        <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
+                                            <h7>Jake</h7> <p id="teaminfo">Nuesca</p>
+                                            </a>
+                                            <p>Product Design</p>  
+                                            <p>Mechanical Eng.</p>
                                         </a>
-                                        <p>Product Design</p>  
-                                        <p>Mechanical Eng.</p>
                                     </div>
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/aryannair">
-                                        <h7>Aryan</h7> <p id="teaminfo">Nair</p>
+                                        <img src="../assets/img/pizza/icons/aryan.svg" alt="Aryan" />
+                                        <a href="https://www.linkedin.com/in/aryannair">
+                                            <h7>Aryan</h7> <p id="teaminfo">Nair</p>
+                                            </a>
+                                            <p>Community Engagement</p>  
+                                            <p>Chemical Eng.</p>
                                         </a>
-                                        <p>Community Engagement</p>  
-                                        <p>Chemical Eng.</p>
                                     </div>
                                 </div>
                             </div>
