disappearing majors and roles

--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -112,35 +112,35 @@
                                 <a href="https://www.linkedin.com/in/kaylanh/">
                                 <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
                                 </a>
-                                <p>Kaylan Huang</p>
+                                <h7>Kaylan</h7> <p id="teaminfo">Huang</p>
                                 </a>
-                                <p>Project Lead</p>
-                                <p>Senior | Economics</p>
+                                <p id="teaminfo">Project Lead</p>
+                                <p id="teaminfo">Senior | Economics</p>
                               </div>
                               <div class="col">
                                 <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
                                 <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyad" />
-                                <p>Zeyad El-Arabaty</p>
+                                <h7>Zeyad</h7> <p id="teaminfo">El-Arabaty</p>
                                   </a>
-                                  <p>Project Lead</p>
-                                  <p>Senior | CompSci</p>
+                                  <p id="teaminfo">Project Lead</p>
+                                  <p id="teaminfo">Senior | CompSci</p>
                                 </a>
                               </div>
                               <div class="col">
                                 <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
                                 <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
-                                <p>Qianning Tang</p>
+                                <h7>Qianning</h7>  <p id="teaminfo">Tang</p>
                                   </a>
-                                  <p>Freshman | Sustanable Environmental Design</p>
+                                  <p id="teaminfo">Freshman | Sustanable Environmental Design</p>
                                 </a>
                               </div>
                               <div class="col">
                                 <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
                                 <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
                                 </a>
-                                <p>Ryan Yu</p>
+                                <h7>Ryan</h7>  <p id="teaminfo">Yu</p>
                               </a>
-                              <p>Junior | Molecular and Cell Biology</p>
+                              <p id="teaminfo">Junior | Molecular and Cell Biology</p>
                               </div>
                               <div class="col">
                                 <a href="https://www.linkedin.com/in/shaantam/">
@@ -148,7 +148,7 @@
                                 <a href="https://www.linkedin.com/in/shaantam/">
                                   <h7>Shaantam</h7> <p id="teaminfo">Chawla</p>
                                   </a>
-                                  <p>Junior | EECS + Public Policy Minor</p>
+                                  <p id="teaminfo">Junior | EECS + Public Policy Minor</p>
                                 </a>
                             </div>
                           </div>
