--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -128,15 +128,15 @@
                                         <a href="https://www.linkedin.com/in/grace-lam-95789a62/">
                                         <img src="../assets/img/pizza/icons/grace.svg" alt="Grace" />
                                         <p>Grace <p id="teaminfo">Lam</p>
-                                        <p>Project Lead</p>  
-                                        <p>EECS, Business</p>
+                                        <p id="teaminfo">Project Lead</p>  
+                                        <p id="teaminfo">EECS, Business</p>
                                         </a>
                                     </div>
                                     <div class="col">
                                         <img src="../assets/img/pizza/icons/jasmine.svg" alt="Jasmine" />
                                         <h7>Jasmine</h7> <p id="teaminfo">Chen</p>
-                                        <p>Space Design</p>  
-                                        <p>Architecture</p>
+                                        <p id="teaminfo">Space Design</p>  
+                                        <p id="teaminfo">Architecture</p>
                                     </div>
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/neemarashidi/">
@@ -144,8 +144,8 @@
                                         <a href="https://www.linkedin.com/in/neemarashidi/">
                                             <h7>Neema</h7> <p id="teaminfo">Rashidi</p>
                                             </a>
-                                            <p>Community Engagement</p>  
-                                            <p>MCB</p>
+                                            <p id="teaminfo">Community Engagement</p>  
+                                            <p id="teaminfo">MCB</p>
                                         </a>
                                     </div>
                                     <div class="col">
@@ -154,8 +154,8 @@
                                         <a href="https://www.linkedin.com/in/natalie-deng">
                                             <h7>Natalie</h7> <p id="teaminfo">Deng</p>
                                             </a>
-                                            <p>Community Engagement</p>  
-                                            <p>Political Economics</p>
+                                            <p id="teaminfo">Community Engagement</p>  
+                                            <p id="teaminfo">Political Economics</p>
                                         </a>
                                     </div>
                                     <div class="col">
@@ -164,8 +164,8 @@
                                         <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
                                             <h7>Jake</h7> <p id="teaminfo">Nuesca</p>
                                             </a>
-                                            <p>Product Design</p>  
-                                            <p>Mechanical Eng.</p>
+                                            <p id="teaminfo">Product Design</p>  
+                                            <p id="teaminfo">Mechanical Eng.</p>
                                         </a>
                                     </div>
                                     <div class="col">
@@ -174,8 +174,8 @@
                                         <a href="https://www.linkedin.com/in/aryannair">
                                             <h7>Aryan</h7> <p id="teaminfo">Nair</p>
                                             </a>
-                                            <p>Community Engagement</p>  
-                                            <p>Chemical Eng.</p>
+                                            <p id="teaminfo">Community Engagement</p>  
+                                            <p id="teaminfo">Chemical Eng.</p>
                                         </a>
                                     </div>
                                 </div>
