--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -134,8 +134,8 @@
                                         <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
                                             <h7>Isabella</h7> <p id="teaminfo">Dyc-O'Neal</p>
                                             </a>
-                                            <p>Project Lead</p>  
-                                            <p>Cognitive Science</p>
+                                            <p id="teaminfo">Project Lead</p>  
+                                            <p id="teaminfo">Cognitive Science</p>
                                     </div>
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
@@ -144,8 +144,8 @@
                                         <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
                                             <h7>Abhinav</h7> <p id="teaminfo">Subramaniam</p>
                                             </a>
-                                            <p>Business Strategy Developer</p>  
-                                            <p>Mechanical Engineering</p>
+                                            <p id="teaminfo">Business Strategy Developer</p>  
+                                            <p id="teaminfo">Mechanical Engineering</p>
                                     </div>
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
@@ -154,15 +154,15 @@
                                         <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
                                             <h7>Laurel</h7> <p id="teaminfo">Nelson</p>
                                             </a>
-                                            <p>Business Strategy Developer</p>  
-                                            <p>Bioengineering</p>
+                                            <p id="teaminfo">Business Strategy Developer</p>  
+                                            <p id="teaminfo">Bioengineering</p>
                                             </a>
                                     </div>
                                     <div class="col">
                                         <img src="../assets/img/groupsource/icons/leo.svg" alt="Leo" />
                                         <h7>Leo</h7> <p id="teaminfo">Gamboa</p>
-                                        <p>Business Strategy Developer</p>  
-                                        <p>MCB & Political Science</p>
+                                        <p id="teaminfo">Business Strategy Developer</p>  
+                                        <p id="teaminfo">MCB & Political Science</p>
                                     </div>
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/maya-chen-1099/">
@@ -171,8 +171,8 @@
                                         <a href="https://www.linkedin.com/in/maya-chen-1099/">
                                             <h7>Maya</h7> <p id="teaminfo">Chen</p>
                                             </a>
-                                            <p>User Interface Designer</p>  
-                                            <p>Cognitive Science</p>
+                                            <p id="teaminfo">User Interface Designer</p>  
+                                            <p id="teaminfo">Cognitive Science</p>
                                     </div>
                                 </div>
                             </div>
