--- a/projects/netic.html
+++ b/projects/netic.html
@@ -132,8 +132,8 @@
                                     <a href="https://www.linkedin.com/in/anika-singhania-b07b31179/">
                                       <h7>Anika</h7> <p id="teaminfo">Singhania</p>
                                     </a>
-                                      <p>Project Lead</p>
-                                      <p>Freshman | CompSci</p>
+                                      <p id="teaminfo">Project Lead</p>
+                                      <p id="teaminfo">Freshman | CompSci</p>
                                   </a>
                                 </div>
                                 <div class="col">
@@ -142,8 +142,8 @@
                                     <a href="https://www.linkedin.com/in/allan-lee-22a0a614a/">
                                       <h7>Allan</h7>  <p id="teaminfo">Lee</p>
                                     </a>
-                                      <p>Design Consultant</p>
-                                      <p>Junior | BioE</p>
+                                      <p id="teaminfo">Design Consultant</p>
+                                      <p id="teaminfo">Junior | BioE</p>
                                   </a>
                                 </div>
                                 <div class="col">
@@ -152,8 +152,8 @@
                                     <a href="https://www.linkedin.com/in/leilani-chu-342563130/">
                                       <h7>Leilani</h7> <p id="teaminfo">Chu</p>
                                     </a>
-                                      <p>UI Designer</p>
-                                      <p>Senior | Molecular & Cell Biology</p>
+                                      <p id="teaminfo">UI Designer</p>
+                                      <p id="teaminfo">Senior | Molecular & Cell Biology</p>
                                   </a>
                                 </div>
                                 <div class="col">
@@ -162,15 +162,15 @@
                                     <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
                                       <h7>Philippa</h7> <p id="teaminfo">Steinberg</p>
                                     </a>
-                                      <p>UI Designer</p>
-                                      <p>Freshman | Molecular & Cell Biology</p>
+                                      <p id="teaminfo">UI Designer</p>
+                                      <p id="teaminfo">Freshman | Molecular & Cell Biology</p>
                                   </a>
                                 </div>
                                 <div class="col">
                                     <img src="../assets/img/netic/people/reid.svg" alt="reid" />
                                     <h7>Reid</h7> <p id="teaminfo">Johnson</p>
-                                    <p>Coding Consultant</p>
-                                    <p>Junior | Math + CompSci</p>
+                                    <p id="teaminfo">Coding Consultant</p>
+                                    <p id="teaminfo">Junior | Math + CompSci</p>
                                 </div>
                                 <div class="col">
                                   <a href="https://www.linkedin.com/in/carlos-oriol/">
@@ -178,8 +178,8 @@
                                     <a href="https://www.linkedin.com/in/carlos-oriol/">
                                       <h7>Carlos</h7> <p id="teaminfo"> Oriol</p>
                                     </a>
-                                      <p>Design Consultant</p>
-                                      <p>Sophomore | Data Science</p>
+                                      <p id="teaminfo">Design Consultant</p>
+                                      <p id="teaminfo">Sophomore | Data Science</p>
                                   </a>
                                 </div>
                             </div>
