--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -134,8 +134,8 @@
                                     <a href="https://www.linkedin.com/in/zulaika-zulkephli-a77a64183/">
                                         <h7>Zulaika</h7> <p id="teaminfo">Zulkephli</p>
                                         </a>
-                                        <p>Project Lead</p>  
-                                        <p>Senior | Psychology</p>
+                                        <p id="teaminfo">Project Lead</p>  
+                                        <p id="teaminfo">Senior | Psychology</p>
                                 </div>
                                 <div class="col">
                                     <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
@@ -144,7 +144,7 @@
                                     <a href="https://www.linkedin.com/in/batu-akkas-416b0313b/">
                                         <h7>Batu</h7> <p id="teaminfo">Akkas</p>
                                         </a>
-                                        <p>Freshman | BioE</p>
+                                        <p id="teaminfo">Freshman | BioE</p>
                                 </div>
                                 <div class="col">
                                     <a href="https://www.linkedin.com/in/djasonchen/">
@@ -153,22 +153,22 @@
                                     <a href="https://www.linkedin.com/in/djasonchen/">
                                         <h7>Dan</h7> <p id="teaminfo">Chen</p>
                                         </a>
-                                        <p>Sophomore | Statistics</p>
+                                        <p id="teaminfo">Sophomore | Statistics</p>
                                 </div>
                                 <div class="col">
                                     <img src="../assets/img/makerspace/icons/jeffrey.svg" alt="jeffrey" />
                                     <h7>Jeffrey</h7> <p id="teaminfo">Shen</p>
-                                    <p>Freshman | Architecture</p>
+                                    <p id="teaminfo">Freshman | Architecture</p>
                                 </div>
                                 <div class="col">
                                     <img src="../assets/img/makerspace/icons/natalie.svg" alt="natalie" />
                                     <h7>Natalie</h7> <p id="teaminfo">Chu</p>
-                                    <p>Freshman | Architecture</p>
+                                    <p id="teaminfo">Freshman | Architecture</p>
                                 </div>
                                 <div class="col">
                                     <img src="../assets/img/makerspace/icons/sunny.svg" alt="sunny" />
                                     <h7>Sunny</h7> <p id="teaminfo">Hsu</p>
-                                    <p>Freshman | CivE</p>
+                                    <p id="teaminfo">Freshman | CivE</p>
                                 </div>
                             </div>
                         </div>
