synced up scss and css and turned off display for teaminfo

--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -127,7 +127,7 @@
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/grace-lam-95789a62/">
                                         <img src="../assets/img/pizza/icons/grace.svg" alt="Grace" />
-                                        <p>Grace <p id="teaminfo">Lam</p>
+                                        <h7>Grace</h7> <p id="teaminfo">Lam</p>
                                         <p id="teaminfo">Project Lead</p>  
                                         <p id="teaminfo">EECS, Business</p>
                                         </a>
@@ -422,8 +422,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <!-- Animation Libraries -->
-    <script src="assets/js/particles.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="../assets/js/particles.js"></script>
+    <script src="../assets/js/app.js"></script>
     <!-- Custom Scripts -->
     <script src="../assets/js/script.js"></script>
     <script src="../assets/js/members.js"></script>
