landing page tweaks

--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -127,7 +127,7 @@
                                     <div class="col">
                                         <a href="https://www.linkedin.com/in/grace-lam-95789a62/">
                                         <img src="../assets/img/pizza/icons/grace.svg" alt="Grace" />
-                                        <h7>Grace</h7> <p id="teaminfo">Lam</p>
+                                        <h7>Grace</h7> <h7 id="teaminfo">Lam</h7>
                                         <p id="teaminfo">Project Lead</p>  
                                         <p id="teaminfo">EECS, Business</p>
                                         </a>
