--- a/projects/netic.html
+++ b/projects/netic.html
@@ -69,12 +69,7 @@
 
     <!-- Overview Section -->
         <div class="overview-container">
-
-            <div class="logo-container">
-                <img src="../assets/img/netic/netic-log.svg" alt="Groupsource" id="netic-logo"/>
-            </div>
-
-
+          <img class="md-img center-img" src="../assets/img/netic/netic-log.svg" alt="Netic" id="groupsource-logo" style="width: 60%;"/>
             <p class="project" style="text-align: center; padding-bottom: 10px;">
               Our project was to design a better experience for physical therapy patients. More specifically, we did so by designing the user interface, establishing the brand identity, and developing the ML. </p>
             <div class="project-overview-container">
